# augrim

./: .gitignore  CODEOWNERS  Cargo.toml  MAINTAINERS.md  README.md  justfile
.github/workflows/: publish.yml  rust.yml
libaugrim/: Cargo.toml
libaugrim/src/: lib.rs  message.rs  process.rs  time.rs
libaugrim/src/algorithm/: doctest_setup.rs  mod.rs  value_impls.rs
libaugrim/src/algorithm/two_phase_commit/: coordinator_action.rs  coordinator_algorithm.rs  coordinator_context.rs  coordinator_event.rs  coordinator_message.rs  message.rs  mod.rs  participant_action.rs  participant_algorithm.rs  participant_context.rs  participant_event.rs  unified_action.rs  unified_algorithm.rs  unified_context.rs  unified_context_builder.rs  unified_role.rs  unified_state.rs
libaugrim/src/error/: algorithm.rs  internal.rs  invalid_state.rs  mod.rs
libaugrim/src/links/: mod.rs
libaugrim/src/process/: mod.rs  process_impls.rs
libaugrim/src/two_phase_commit/: coordinator_action.rs  coordinator_algorithm.rs  coordinator_context.rs  coordinator_message.rs  mod.rs  participant_action.rs  participant_algorithm.rs  participant_context.rs  participant_message.rs  unified_action.rs  unified_algorithm.rs  unified_context.rs  unified_context_builder.rs  unified_event.rs  unified_message.rs  unified_role.rs  unified_state.rs
