# Copyright 2021 Cargill Incorporated
# Copyright 2023 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "augrim"
version = "0.1.2"
authors = ["Bitwise IO, Inc.", "Cargill Corporation"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Augrim is a library of consensus algorithms implemented in Rust.
"""
repository = "https://github.com/augrim/augrim"

[dependencies]
log = "0.4"

[features]
default = [
    "algorithm",
]

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "algorithm-two-phase-commit",
    "time",
]

algorithm = []
algorithm-two-phase-commit = ["algorithm", "time"]
time = []

[package.metadata.docs.rs]
features = [
  "stable",
  "experimental"
]
